# ProjetoFinal

./: .gitignore  README.md  neural_emotion_face.ipynb  pyproject.toml
notebooks/: neural_emotion_face.ipynb
